force-app/main/default/objects/Question_Group__c/Question_Group__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - This object used to store information of form sections.</description>
    <label>Question Group</label>
    <nameField>
        <label>Question Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>