force-app/main/default/objects/Question_Group__c/fields/is_Delete__c.field-meta.xml
<CustomField>
    <fullName>is_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when section will be deleted by admin.</description>
    <inlineHelpText>Checked when section will be deleted by admin.</inlineHelpText>
    <label>is Delete</label>
    <type>Checkbox</type>
</CustomField>