force-app/main/default/objects/Question_Group__c/fields/Is_Show_On_From__c.field-meta.xml
<CustomField>
    <fullName>Is_Show_On_From__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Show On From</label>
    <type>Checkbox</type>
</CustomField>