force-app/main/default/objects/Question_Group__c/fields/Pagination__c.field-meta.xml
<CustomField>
    <fullName>Pagination__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pagination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>